--- a/GuitarShop/Views/Product/List.cshtml
+++ b/GuitarShop/Views/Product/List.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- uses the Product model -->
+﻿<!-- Uses the Product model -->
 @model List<Product>
 @{
     ViewBag.Title = "Product List";
@@ -13,7 +13,7 @@
         </tr>
     </thead>
     <tbody>
-        <!-- Loop to display the name and price of the products -->
+        <!-- foreach loop to display the name and price of the products -->
         @foreach (var product in @Model)
         {
             <tr>
